完善了订阅功能，但还剩下生成订阅链接的工作，新增了一些中文翻译，更改了版本号

--- a/translations/zh/LC_MESSAGES/messages.po
+++ b/translations/zh/LC_MESSAGES/messages.po
@@ -743,9 +743,20 @@ msgstr "续费"
 msgid "renew customer"
 msgstr "续费"
 
+msgid "generate"
+msgstr "生成"
+
 msgid "adding duration"
 msgstr "增加时长"
 
 msgid "total duration"
 msgstr "总时长"
 
+msgid "expired customers"
+msgstr "到期用户数"
+
+msgid "unexpired"
+msgstr "未到期"
+
+msgid "expired"
+msgstr "已到期"
